# ai-council-mcp

./: README.md  config.yaml  pyproject.toml
ai_council/: __init__.py  config.py  logger.py  main.py  models.py  synthesis.py
