[project]
name = "ai-council"
version = "0.1.0"
description = "MCP server that consults multiple AI models in parallel and synthesizes their responses into comprehensive answers"
authors = [{name = "Akuti", email = "a40723201+0xAkuti@users.noreply.github.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "model-context-protocol", "ai", "openai", "openrouter", "parallel-processing", "wisdom-of-crowds"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.9.4",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "openai>=1.91.0",
]

[project.scripts]
ai-council = "ai_council.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_council"]

[tool.hatch.build.targets.sdist]
include = [
    "/ai_council",
    "/config.yaml",
    "/README.md",
]
